se finalizó el proyecto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 NOT FOUND</title>
+  <link rel="icon" href="images/devchallenges.png" />
+  
+  <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
+  <title>Page Not Found</title>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -13,7 +16,6 @@
        <h2 class="not-found">404 NOT FOUND</h2>
     </header>
     <main>
-
       <div class="main-container">
         <div class="container-left">
           <img src="images/Scarecrow.png" alt="Scarecrow" />
@@ -25,6 +27,9 @@
           <a href="https://github.com/julianperna" target="_blank" class="main-button">Back to homepage</a>
         </div>
       </div>
+      <footer class="footer-p">
+       <p>created by <a href="https://github.com/julianperna" target="_blank">Julián Perna</a> - devChallenges.io</p> 
+      </footer>
     </main>
   </div>
   </body>
